--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A real-time chat",
   "main": "server.js",
   "scripts": {
-    "test": "nodemon server.js",
-    "start": "node server.js"
+    "test": "",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
