--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "mongoose": "^6.7.5",
     "socket.io": "^4.5.4"
   },
   "devDependencies": {
