--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-PORT=80
+PORT=3000
+
+MONGO_CONNECTION = "mongodb+srv://pablo:ZHOxqIQaDKjL0rTE@webchat.kzd9odx.mongodb.net/?retryWrites=true&w=majority"
