--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
+    "emoji-picker-element": "^1.14.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.5",
